# t-keir

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  index.html  install.sh  pyproject.toml  sitemap.xml
tkeir/: __init__.py  makedoc.sh  mkdocs.yml  pyproject.toml
tkeir/app/ssl/: README.md
tkeir/doc/: builddoc.sh  requirements-doc.txt
tkeir/doc/source/: conception.rst  conf.py  index.rst  installation.rst  oam.rst  overview.rst  ready_to_run.rst  security.rst
tkeir/doc/source/tools/: cluster_inference.rst  converter.rst  embeddings.rst  evaluation.rst  indexing.rst  keywords.rst  mstagger.rst  nertagger.rst  pipeline.rst  qa.rst  relations_clustering.rst  search_engine.rst  sentiment.rst  summarizer.rst  syntactictagger.rst  tokenizer.rst  tools.rst  tools_overview.rst  zsl_classifier.rst
tkeir/docs/: about.md  conception.md  index.md  installation.md  oam.md  overview.md  ready_to_run.md  security.md
tkeir/docs/configuration/examples/: converter.json  loggerconfiguration.json  runtimeconfiguration.json  serializeconfiguration.json
tkeir/docs/logos/: T-KEIR_logo_FIN.ai
tkeir/docs/resources/api/: embeddings.json  indexer.json  indexing.json  qa.json
tkeir/docs/tools/: cluster_inference.md  converter.json  converter.md  embeddings.json  embeddings.md  evaluation.md  indexing.md  keywords.md  mstagger.md  nertagger.json  nertagger.md  pipeline.md  qa.md  relations_clustering.md  search_engine.md  searching.json  sentiment.json  sentiment.md  summarizer.md  summary.json  syntactictagger.json  syntactictagger.md  tokenizer.md  tools.md  tools_overview.md  zsl_classifier.md
tkeir/resources/indices/indices_mapping/: cache_index.json  cache_index_fr.json
tkeir/resources/qa/: ai.csv
tkeir/runtimes/docker/: .env  builddocker.sh  docker-compose-opendistro.yml  docker-compose-shell.yml  docker-compose-tika.yml  docker-compose-tkeir-search.yml  docker-compose-tkeir.yml  envfile.local  kong.yml  kong_runner.sh  prom.sh  prometheus.yml  readme.md  search-api.yml
tkeir/runtimes/docker/tkeir/: Dockerfile.tkeir-base.prod
tkeir/runtimes/monitoring/: docker-compose.yml
tkeir/runtimes/monitoring/grafana/: datasource.yml  grafana.ini
tkeir/runtimes/monitoring/prometheus/: prometheus.yml
tkeir/tests/: Coverage.sh  FunctionalTestSuite.sh  UnitTestSuite.sh
tkeir/tests/data/: converter_test.docx  converter_test.odt  converter_test.rtf  energy-terms.txt  job_titles.txt  ner-rules.json  qa_queries.json  stopwords.txt  syntactic-rules.json  terminology-property.txt
tkeir/tests/data/test-index/: create-index.sh  destroy-index.sh  fulldoc.json  index4test.json.7z  mapping4test.json  qe_docid2termvector.json  qe_expandwithdocid_docs.json  qe_expandwithdocids.json  qe_getdocidwithrequest.json  qe_query2termvector.json  scorer_doc.json  scorer_q.json  settings4test.json
tkeir/tests/data/test-inputs/: 0000001-enron.txt.json  0000001-mail1.txt.json  0000002-mail2.txt.json  0000002-polymerization.txt.json  0000003-lecun.txt.json  0000003-mail3.txt.json  enron.txt.f831c41e13b25511af426166ba0d60b2.converted.json  lecun.txt.fa0b4c8b117230e8abd36fa46f1a4210.converted.json  mail1.txt.9f29b7a74220a8d5811f4444b56cf1d9.converted.json  mail2.txt.391e353f81802d9a395628f7cf66269b.converted.json  mail3.txt.abffc0139d418db84f14f861f734e339.converted.json  ner.txt.7354e1d16111dce0edf9d679792b6303.converted.json  (+2 more)
tkeir/tests/es_queries/: queries.sh
tkeir/tests/functional_tests/: TestClusterInferSvc.py  TestConverterSvc.py  TestEmbeddingsSvc.py  TestIndexSvc.py  TestKeywordsExtractorSvc.py  TestMSTaggerSvc.py  TestNERTaggerSvc.py  TestQASvc.py  TestSentimentSvc.py  TestSummarizerSvc.py  TestSyntacticTaggerSvc.py  TestTokenizerSvc.py  TestZeroshotClassifierSvc.py
tkeir/tests/unittests/: TestAggregator.py  TestAnnotationConfiguration.py  TestAnnotationResources.py  TestClusterInferClient.py  TestClusterInference.py  TestCommonConfiguration.py  TestConstants.py  TestConverter.py  TestConverterClient.py  TestConverterConfiguration.py  TestDictionaryTrie.py  TestEmailConverter.py  TestEmbeddingConfiguration.py  TestEmbeddings.py  TestEmbeddingsClient.py  TestIndexClient.py  TestIndexing.py  TestIndexingConfiguration.py  TestKeywordClient.py  TestKeywordsConfiguration.py  TestKeywordsExtractor.py  TestLoggerConfiguration.py  TestMSTaggerClient.py  TestMorphoSyntacticTagger.py  TestMorphoSyntacticTaggerConfiguration.py  TestNERTagger.py  TestNERTaggerClient.py  TestNERTaggerConfiguration.py  TestNetworkConfiguration.py  TestQA.py  TestQAConfiguration.py  TestQueryExpansion.py  TestRawConverter.py  TestRelationClusterizerConfiguration.py  TestRuntimeConfiguration.py  TestScorer.py  TestSearching.py  TestSearchingConfiguration.py  TestSentiment.py  TestSentimentConfiguration.py  (+18 more)
tkeir/thot/: __init__.py  batch_ingester.py  clusterinfer_client.py  clusterinfer_svc.py  converter_client.py  converter_svc.py  embeddings_client.py  embeddings_svc.py  index_client.py  index_svc.py  ireval-nb.ipynb  ireval.py  keywordextractor_client.py  keywordextractor_svc.py  mstagger_client.py  mstagger_svc.py  nertagger_client.py  nertagger_svc.py  pipeline_client.py  pipeline_svc.py  qa_client.py  qa_svc.py  relation_clustering.py  relation_modeling.py  relation_stats.py  search_svc.py  sentiment_client.py  sentiment_svc.py  summarizer_client.py  summarizer_svc.py  syntactictagger_client.py  syntactictagger_svc.py  tkeir2index.py  tkeir_init_project.py  tokenizer_client.py  tokenizer_svc.py  zeroshotclassifier_client.py  zeroshotclassifier_svc.py
tkeir/thot/core/: CommonConfiguration.py  Constants.py  DictionaryTrie.py  LoggerConfiguration.py  NetworkConfiguration.py  RuntimeConfiguration.py  ThotLogger.py  ThotMetrics.py  Utils.py  __init__.py
tkeir/thot/data/: event.py  generateTrainingDataset.py  ner.py  rel.py  syntax2lem.py  syntax2pos.py  syntax2svo.py
tkeir/thot/modeling/: trainMT5.py
tkeir/thot/servicedoc/: ConverterDoc.py  EmbeddingsDoc.py  ServiceDoc.py
tkeir/thot/tasks/: TaskInfo.py
tkeir/thot/tasks/converters/: Converter.py  (+7 more)
tkeir/thot/web/: db.sqlite3  manage.py
(+217 files in other folders)
